@@ -26,6 +26,7 @@ import ca.uhn.fhir.model.api.IQueryParameterType;
 import ca.uhn.fhir.model.api.Include;
 import ca.uhn.fhir.rest.api.Constants;
 import ca.uhn.fhir.rest.api.SearchContainedModeEnum;
+import ca.uhn.fhir.rest.api.SearchIncludeDeletedEnum;
 import ca.uhn.fhir.rest.api.SearchTotalModeEnum;
 import ca.uhn.fhir.rest.api.SortOrderEnum;
 import ca.uhn.fhir.rest.api.SortSpec;
@@ -38,12 +39,13 @@ import ca.uhn.fhir.rest.param.TokenParamModifier;
 import ca.uhn.fhir.util.UrlUtil;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import jakarta.annotation.Nonnull;
-import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.commons.lang3.Validate;
 import org.apache.commons.lang3.builder.CompareToBuilder;
 import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.apache.commons.lang3.builder.ToStringStyle;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -54,8 +56,8 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static ca.uhn.fhir.rest.param.ParamPrefixEnum.GREATERTHAN_OR_EQUALS;
 import static ca.uhn.fhir.rest.param.ParamPrefixEnum.LESSTHAN_OR_EQUALS;
@@ -67,7 +69,10 @@ import static org.apache.commons.lang3.StringUtils.isNotBlank;
 public class SearchParameterMap implements Serializable {
 	public static final Integer INTEGER_0 = 0;
 	private static final org.slf4j.Logger ourLog = org.slf4j.LoggerFactory.getLogger(SearchParameterMap.class);
+
+	@Serial
 	private static final long serialVersionUID = 1L;
+
 	private final HashMap<String, List<List<IQueryParameterType>>> mySearchParameterMap = new LinkedHashMap<>();
 	private Integer myCount;
 	private Integer myOffset;
@@ -85,6 +90,7 @@ public class SearchParameterMap implements Serializable {
 	private Integer myLastNMax;
 	private boolean myDeleteExpunge;
 	private SearchContainedModeEnum mySearchContainedMode = SearchContainedModeEnum.FALSE;
+	private SearchIncludeDeletedEnum mySearchIncludeDeletedMode;
 
 	/**
 	 * Constructor
@@ -103,6 +109,7 @@ public class SearchParameterMap implements Serializable {
 	/**
 	 * Creates and returns a copy of this map
 	 */
+	@SuppressWarnings("MethodDoesntCallSuperMethod")
 	@JsonIgnore
 	@Override
 	public SearchParameterMap clone() {
@@ -123,6 +130,7 @@ public class SearchParameterMap implements Serializable {
 		map.setLoadSynchronousUpTo(getLoadSynchronousUpTo());
 		map.setOffset(getOffset());
 		map.setSearchContainedMode(getSearchContainedMode());
+		map.setSearchIncludeDeletedMode(getSearchIncludeDeletedMode());
 
 		for (Map.Entry<String, List<List<IQueryParameterType>>> entry : mySearchParameterMap.entrySet()) {
 			List<List<IQueryParameterType>> andParams = entry.getValue();
@@ -178,6 +186,7 @@ public class SearchParameterMap implements Serializable {
 		return this;
 	}
 
+	@SuppressWarnings("unchecked")
 	public SearchParameterMap add(String theName, IQueryParameterOr<?> theOr) {
 		if (theOr == null) {
 			return this;
@@ -256,7 +265,7 @@ public class SearchParameterMap implements Serializable {
 	}
 
 	private void addUrlParamSeparator(StringBuilder theB) {
-		if (theB.length() == 0) {
+		if (theB.isEmpty()) {
 			theB.append('?');
 		} else {
 			theB.append('&');
@@ -408,6 +417,14 @@ public class SearchParameterMap implements Serializable {
 	}
 
 	/**
+	 * @deprecated Use {@link #toNormalizedQueryString()} instead.
+	 */
+	@Deprecated(since = "8.6.0", forRemoval = true)
+	public String toNormalizedQueryString(FhirContext theCtx) {
+		return toNormalizedQueryString();
+	}
+
+	/**
 	 * This method creates a URL query string representation of the parameters in this
 	 * object, excluding the part before the parameters, e.g.
 	 * <p>
@@ -418,7 +435,7 @@ public class SearchParameterMap implements Serializable {
 	 * as it doesn't affect the substance of the results returned
 	 * </p>
 	 */
-	public String toNormalizedQueryString(FhirContext theCtx) {
+	public String toNormalizedQueryString() {
 		StringBuilder b = new StringBuilder();
 
 		ArrayList<String> keys = new ArrayList<>(keySet());
@@ -430,18 +447,16 @@ public class SearchParameterMap implements Serializable {
 
 			for (List<? extends IQueryParameterType> nextValuesAndIn : nextValuesAndsIn) {
 
-				List<IQueryParameterType> nextValuesOrsOut = new ArrayList<>();
+				List<IQueryParameterType> nextValuesOrsOut = new ArrayList<>(nextValuesAndIn);
 
-				nextValuesOrsOut.addAll(nextValuesAndIn);
+				nextValuesOrsOut.sort(new QueryParameterTypeComparator());
 
-				nextValuesOrsOut.sort(new QueryParameterTypeComparator(theCtx));
-
-				if (nextValuesOrsOut.size() > 0) {
+				if (!nextValuesOrsOut.isEmpty()) {
 					nextValuesAndsOut.add(nextValuesOrsOut);
 				}
 			} // for AND
 
-			nextValuesAndsOut.sort(new QueryParameterOrComparator(theCtx));
+			nextValuesAndsOut.sort(new QueryParameterOrComparator());
 
 			for (List<IQueryParameterType> nextValuesAnd : nextValuesAndsOut) {
 				addUrlParamSeparator(b);
@@ -470,9 +485,9 @@ public class SearchParameterMap implements Serializable {
 					if (i > 0) {
 						b.append(',');
 					}
-					String valueAsQueryToken = nextValueOr.getValueAsQueryToken(theCtx);
+					String valueAsQueryToken = nextValueOr.getValueAsQueryToken();
 					valueAsQueryToken = defaultString(valueAsQueryToken);
-					b.append(UrlUtil.escapeUrlParam(valueAsQueryToken));
+					b.append(UrlUtil.escapeUrlParam(valueAsQueryToken, false));
 				}
 			}
 		} // for keys
@@ -557,7 +572,14 @@ public class SearchParameterMap implements Serializable {
 			b.append(getSearchContainedMode().getCode());
 		}
 
-		if (b.length() == 0) {
+		if (getSearchIncludeDeletedMode() != null) {
+			addUrlParamSeparator(b);
+			b.append(Constants.PARAM_INCLUDE_DELETED);
+			b.append("=");
+			b.append(getSearchIncludeDeletedMode().getCode());
+		}
+
+		if (b.isEmpty()) {
 			b.append('?');
 		}
 
@@ -614,7 +636,7 @@ public class SearchParameterMap implements Serializable {
 					.filter(nextOr -> nextOr.getMissing() == null)
 					.filter(nextOr -> nextOr instanceof QuantityParam)
 					.filter(nextOr -> isBlank(((QuantityParam) nextOr).getValueAsString()))
-					.collect(Collectors.toList());
+					.toList();
 
 			ourLog.debug("Ignoring empty parameter: {}", theParamName);
 			orList.removeAll(emptyParameters);
@@ -692,7 +714,7 @@ public class SearchParameterMap implements Serializable {
 	 * @return an And/Or List of Query Parameters matching the qualifier.
 	 */
 	public List<List<IQueryParameterType>> removeByNameAndModifier(String theName, String theModifier) {
-		theModifier = StringUtils.defaultString(theModifier, "");
+		theModifier = Objects.toString(theModifier, "");
 
 		List<List<IQueryParameterType>> remainderParameters = new ArrayList<>();
 		List<List<IQueryParameterType>> matchingParameters = new ArrayList<>();
@@ -702,7 +724,7 @@ public class SearchParameterMap implements Serializable {
 		if (andList != null) {
 			for (List<IQueryParameterType> orList : andList) {
 				if (!orList.isEmpty()
-						&& StringUtils.defaultString(orList.get(0).getQueryParameterQualifier(), "")
+						&& Objects.toString(orList.get(0).getQueryParameterQualifier(), "")
 								.equals(theModifier)) {
 					matchingParameters.add(orList);
 				} else {
@@ -725,7 +747,7 @@ public class SearchParameterMap implements Serializable {
 
 	/**
 	 * For each search parameter in the map, extract any which have the given qualifier.
-	 * e.g. Take the url: Observation?code:text=abc&code=123&code:text=def&reason:text=somereason
+	 * e.g. Take the url: {@code Observation?code:text=abc&code=123&code:text=def&reason:text=somereason}
 	 * <p>
 	 * If we call this function with `:text`, it will return a map that looks like:
 	 * <p>
@@ -735,9 +757,6 @@ public class SearchParameterMap implements Serializable {
 	 * and the remaining search parameters in the map will be:
 	 * <p>
 	 * code -> [[code=123]]
-	 *
-	 * @param theQualifier
-	 * @return
 	 */
 	public Map<String, List<List<IQueryParameterType>>> removeByQualifier(String theQualifier) {
 
@@ -764,11 +783,15 @@ public class SearchParameterMap implements Serializable {
 	}
 
 	public void setSearchContainedMode(SearchContainedModeEnum theSearchContainedMode) {
-		if (theSearchContainedMode == null) {
-			mySearchContainedMode = SearchContainedModeEnum.FALSE;
-		} else {
-			this.mySearchContainedMode = theSearchContainedMode;
-		}
+		this.mySearchContainedMode = Objects.requireNonNullElse(theSearchContainedMode, SearchContainedModeEnum.FALSE);
+	}
+
+	public SearchIncludeDeletedEnum getSearchIncludeDeletedMode() {
+		return mySearchIncludeDeletedMode;
+	}
+
+	public void setSearchIncludeDeletedMode(SearchIncludeDeletedEnum theSearchIncludeDeletedMode) {
+		this.mySearchIncludeDeletedMode = theSearchIncludeDeletedMode;
 	}
 
 	/**
@@ -815,12 +838,12 @@ public class SearchParameterMap implements Serializable {
 		}
 	}
 
-	static int compare(FhirContext theCtx, IQueryParameterType theO1, IQueryParameterType theO2) {
+	static int compare(IQueryParameterType theO1, IQueryParameterType theO2) {
 		CompareToBuilder b = new CompareToBuilder();
 		b.append(theO1.getMissing(), theO2.getMissing());
 		b.append(theO1.getQueryParameterQualifier(), theO2.getQueryParameterQualifier());
 		if (b.toComparison() == 0) {
-			b.append(theO1.getValueAsQueryToken(theCtx), theO2.getValueAsQueryToken(theCtx));
+			b.append(theO1.getValueAsQueryToken(), theO2.getValueAsQueryToken());
 		}
 
 		return b.toComparison();
@@ -843,42 +866,45 @@ public class SearchParameterMap implements Serializable {
 
 		@Override
 		public int compare(Include theO1, Include theO2) {
-			int retVal = StringUtils.compare(theO1.getParamType(), theO2.getParamType());
+			int retVal = Strings.CS.compare(theO1.getParamType(), theO2.getParamType());
 			if (retVal == 0) {
-				retVal = StringUtils.compare(theO1.getParamName(), theO2.getParamName());
+				retVal = Strings.CS.compare(theO1.getParamName(), theO2.getParamName());
 			}
 			if (retVal == 0) {
-				retVal = StringUtils.compare(theO1.getParamTargetType(), theO2.getParamTargetType());
+				retVal = Strings.CS.compare(theO1.getParamTargetType(), theO2.getParamTargetType());
 			}
 			return retVal;
 		}
 	}
 
 	public static class QueryParameterOrComparator implements Comparator<List<IQueryParameterType>> {
-		private final FhirContext myCtx;
 
-		QueryParameterOrComparator(FhirContext theCtx) {
-			myCtx = theCtx;
+		/**
+		 * Constructor
+		 */
+		QueryParameterOrComparator() {
+			super();
 		}
 
 		@Override
 		public int compare(List<IQueryParameterType> theO1, List<IQueryParameterType> theO2) {
 			// These lists will never be empty
-			return SearchParameterMap.compare(myCtx, theO1.get(0), theO2.get(0));
+			return SearchParameterMap.compare(theO1.get(0), theO2.get(0));
 		}
 	}
 
 	public static class QueryParameterTypeComparator implements Comparator<IQueryParameterType> {
 
-		private final FhirContext myCtx;
-
-		QueryParameterTypeComparator(FhirContext theCtx) {
-			myCtx = theCtx;
+		/**
+		 * Constructor
+		 */
+		QueryParameterTypeComparator() {
+			super();
 		}
 
 		@Override
 		public int compare(IQueryParameterType theO1, IQueryParameterType theO2) {
-			return SearchParameterMap.compare(myCtx, theO1, theO2);
+			return SearchParameterMap.compare(theO1, theO2);
 		}
 	}
 
@@ -889,5 +915,51 @@ public class SearchParameterMap implements Serializable {
 		}
 
 		return Collections.unmodifiableList(allChainsInOrder);
+	}
+
+	@Override
+	public boolean equals(Object theO) {
+		if (!(theO instanceof SearchParameterMap that)) return false;
+		return myLoadSynchronous == that.myLoadSynchronous
+				&& myLastN == that.myLastN
+				&& myDeleteExpunge == that.myDeleteExpunge
+				&& Objects.equals(mySearchParameterMap, that.mySearchParameterMap)
+				&& Objects.equals(myCount, that.myCount)
+				&& Objects.equals(myOffset, that.myOffset)
+				&& myEverythingMode == that.myEverythingMode
+				&& Objects.equals(myIncludes, that.myIncludes)
+				&& Objects.equals(myLastUpdated, that.myLastUpdated)
+				&& Objects.equals(myLoadSynchronousUpTo, that.myLoadSynchronousUpTo)
+				&& Objects.equals(myRevIncludes, that.myRevIncludes)
+				&& Objects.equals(mySort, that.mySort)
+				&& mySummaryMode == that.mySummaryMode
+				&& mySearchTotalMode == that.mySearchTotalMode
+				&& Objects.equals(myNearDistanceParam, that.myNearDistanceParam)
+				&& Objects.equals(myLastNMax, that.myLastNMax)
+				&& mySearchContainedMode == that.mySearchContainedMode
+				&& mySearchIncludeDeletedMode == that.mySearchIncludeDeletedMode;
+	}
+
+	@Override
+	public int hashCode() {
+		return Objects.hash(
+				mySearchParameterMap,
+				myCount,
+				myOffset,
+				myEverythingMode,
+				myIncludes,
+				myLastUpdated,
+				myLoadSynchronous,
+				myLoadSynchronousUpTo,
+				myRevIncludes,
+				mySort,
+				mySummaryMode,
+				mySearchTotalMode,
+				myNearDistanceParam,
+				myLastN,
+				myLastNMax,
+				myDeleteExpunge,
+				mySearchContainedMode,
+				mySearchIncludeDeletedMode);
 	}
 }
